[workspace]
members = [
    "n_mcconsole_app",
    "n_mcconsole_core",
    "n_mcconsole_event_bus",
    "n_mcconsole_executor",
    "n_mcconsole_jobs",
    "n_mcconsole_scenes",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
crossterm = "0.29.0"
ratatui = "0.30.2"
